Cuarta version con queries completa

--- a/paginas/menu.html
+++ b/paginas/menu.html
@@ -8,6 +8,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Montserrat+Alternates:wght@400;700&family=Montserrat:wght@400;700&family=Rubik:wght@400;500;700&display=swap" rel="stylesheet">
+    <link rel="shortcut icon" href="../imagenes/ab-fav.ico" type="image/x-icon">
     <title>Menú</title>
 </head>
 <body>
@@ -18,7 +19,7 @@
             <ul>
                 <li><a href="../index.html">Inicio</a></li>
                 <li><a href="menu.html">Menú</a></li>
-                <li><a href="nosotros.html">Nosotros</a></li>
+                <li><a href="conocenos.html">Conócenos</a></li>
                 <li><a href="ubicaciones.html">Ubicaciones</a></li>
                 <li><a href="contacto.html">Contacto</a></li>
             </ul>  
@@ -191,11 +192,11 @@
 
         <div class="navFooter">             
             <ul class="ulFooter">
-                <li><a href="index.html">Inicio</a></li>
-                <li><a href="paginas/menu.html">Menú</a></li>
-                <li><a href="paginas/nosotros.html">Nosotros</a></li>
-                <li><a href="paginas/ubicaciones.html">Ubicaciones</a></li>
-                <li><a href="paginas/contacto.html">Contacto</a></li>
+                <li><a href="../index.html">Inicio</a></li>
+                <li><a href="menu.html">Menú</a></li>
+                <li><a href="conocenos.html">Conócenos</a></li>
+                <li><a href="ubicaciones.html">Ubicaciones</a></li>
+                <li><a href="contacto.html">Contacto</a></li>
             </ul>
         </div>
 
